--- a/src/index.css
+++ b/src/index.css
@@ -7,15 +7,15 @@
   padding: 0px;
 }
 ::-webkit-scrollbar {
-  width: 6px;
+  width: 4px;
 }
 
 ::-webkit-scrollbar-track {
-  background: transparent;
+  background: #1F2937;
 }
 
 ::-webkit-scrollbar-thumb {
-  background: white;
+  background: rgb(101, 101, 116);
   border-radius: 3px;
 }
 body {
